$Id$
===================
HAWKSCOPE CHANGELOG
===================
http://hawkscope.googlecode.com

Changes in version 0.6.0 (2009-04-??)
-------------------------------------
* Ability to show/hide known file icons. Mac .app extension is always hidden.
  http://code.google.com/p/hawkscope/issues/detail?id=78

Changes in version 0.5.4 (2009-03-21)
-------------------------------------
* Gmail Checker plugin
  http://code.google.com/p/hawkscope/issues/detail?id=76
* Open With plugin now saves/loads custom application paths well in Windows
  http://code.google.com/p/hawkscope/issues/detail?id=73
* Open With plugin was failing to open files with spaces on Linux 
  http://code.google.com/p/hawkscope/issues/detail?id=72
* Various enhancements of Execute plugin
  http://code.google.com/p/hawkscope/issues/detail?id=71
* Twitter plugin auto-recovery after network failures
  http://code.google.com/p/hawkscope/issues/detail?id=70    
* Improved keyboard navigation
  http://code.google.com/p/hawkscope/issues/detail?id=69
* No more problems with opening huge folders
  http://code.google.com/p/hawkscope/issues/detail?id=40  


Changes in version 0.5.3 (2009-03-13)
-------------------------------------
* Optimized memory consumption and overal performance
* Improved icon in Windows version
* Added the missing msvcr71.dll in Windows version
  http://code.google.com/p/hawkscope/issues/detail?id=67
* Fixed Network Settings proxy authentication checkbox behavior
  http://code.google.com/p/hawkscope/issues/detail?id=66
* Long menus are no longer splitted with "More..."
  http://code.google.com/p/hawkscope/issues/detail?id=64
* Periodic menu reload in background (with at least 3 minutes between reloads)
  http://code.google.com/p/hawkscope/issues/detail?id=62
* Execute plugin (available separately)
  http://code.google.com/p/hawkscope/issues/detail?id=60 

Changes in version 0.5.2 (2009-02-28)
-------------------------------------
* Twitter plugin (available separately)